--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,700;1,400&display=swap');
 
-.me1{
-    background-color: greenyellow;
-   grid-column-start: 1;
-    grid-column-end: 4;
-}
-.me2{
-    grid-column-start:1;
-    grid-column-end: 4;
-    width: 9rem;
+h1{
+    font-family: 'Overpass', sans-serif;
+
 }
